--- a/index.html
+++ b/index.html
@@ -8,36 +8,37 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Product preview card component</title>
-  <link rel="stylesheet" href="css/styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-  <section>
-    <img class="mobile-img" src="images\image-product-mobile.jpg" alt="Perfume bottle">
-    <img class="desktop-img" src="images\image-product-desktop.jpg" alt="Perfume bottle">
-    <div>
-      <p class="perfume">Perfume</p>
+  <main>
+    <img class="product-image-mobile" src="images/image-product-mobile.jpg" alt="Perfume bottle">
+    <img class="product-image-desktop" src="images/image-product-desktop.jpg" alt="Perfume bottle">
+    <div class="content">
+      <p class="product-category">Perfume</p>
 
-      <h1>Gabrielle Essence Eau De Parfum</h1>
+      <h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
 
-      <p class="description">
+      <p class="product-description">
         A floral, solar and voluptuous interpretation composed by Olivier Polge,
         Perfumer-Creator for the House of CHANEL.
       </p>
 
-      <p class="price">$149.99 <span class="price-prev">$169.99</span></p>
+      <p class="product-price">$149.99<span class="product-price-prev">$169.99</span></p>
 
-      <a>
-        <svg class="shopping-cart" width="15" height="16" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
-            fill="#FFF" />
-        </svg>
+      <button>
+        <img class="shopping-cart" src="images\icon-cart.svg" alt="Shopping cart icon">
         Add to Cart
-      </a>
+      </button>
     </div>
-  </section>
+  </main>
 
 </body>
 
