--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p class="product-price">$149.99<span class="product-price-prev">$169.99</span></p>
 
       <button>
-        <img class="shopping-cart" src="images\icon-cart.svg" alt="Shopping cart icon">
+        <img class="shopping-cart" src="images/icon-cart.svg" alt="Shopping cart icon">
         Add to Cart
       </button>
     </div>
